fixed layout issues

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,4 @@
 .container {
-  min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
@@ -18,7 +17,7 @@
 
 .footer {
   width: 100%;
-  height: 100px;
+  height: 150px;
   border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
